syntax = "proto3";

package booking_service;

service BookedAppointmentsService {
  // bookedAppointments
  rpc CreateAppointment(CreateAppointmentReq) returns (Appointment);
  rpc GetAppointment(AppointmentFieldValueReq) returns (Appointment);
  rpc GetAllAppointment(GetAllAppointmentsReq) returns (Appointments);
  rpc UpdateAppointment(UpdateAppointmentReq) returns (Appointment);
  rpc DeleteAppointment(AppointmentFieldValueReq) returns (DeleteAppointmentStatus);
  rpc GetFilteredAppointments(GetFilteredRequest) returns (Appointments);
}

message Appointment {
  int64 id = 1;
  string department_id = 2;
  string doctor_id = 3;
  string patient_id = 4;
  string doctor_service_id = 5;
  string appointment_date = 6;
  string appointment_time = 7;
  int64 duration = 8;
  string key = 9;
  string expires_at = 10;
  string patient_problem = 11;
  string status = 12;
  string payment_type = 13;
  float payment_amount = 14;
  string created_at = 15;
  string updated_at = 16;
  string deleted_at = 17;
}

message Appointments {
  int64 count = 1;
  repeated Appointment appointments = 2;
}

message CreateAppointmentReq {
  string department_id = 1;
  string doctor_id = 2;
  string patient_id = 3;
  string doctor_service_id = 4;
  string appointment_date = 5;
  string appointment_time = 6;
  int64 duration = 7;
  string key = 8;
  string expires_at = 9;
  string patient_problem = 10;
  string status = 11;
  string payment_type = 12;
  float payment_amount = 13;
}

message UpdateAppointmentReq {
  string department_id = 1;
  string doctor_id = 2;
  string patient_id = 3;
  string doctor_service_id = 4;
  string appointment_date = 5;
  string appointment_time = 6;
  int64 duration = 7;
  string key = 8;
  string expires_at = 9;
  string patient_problem = 10;
  string status = 11;
  string payment_type = 12;
  float payment_amount = 13;
  string field = 14;
  string value = 15;
}

message AppointmentFieldValueReq {
  string field = 1;
  string value = 2;
  bool is_active = 3;
}

message DeleteAppointmentStatus {
  bool status = 1;
}

message GetAllAppointmentsReq {
  string field = 1;
  string value = 2;
  bool is_active = 3;
  uint64 page = 4;
  uint64 limit = 5;
  string order_by = 6;
}

message GetFilteredRequest {
  string field = 1;
  string value = 2;
  bool is_active = 3;
  uint64 page = 4;
  uint64 limit = 5;
  string order_by = 6;
  string status = 7;
}